syntax = "proto3";
package greenfield.virtualgroup;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/bnb-chain/greenfield/x/virtualgroup/types";

// A global virtual group consists of one primary SP (SP) and multiple secondary SP.
// Every global virtual group must belong to a GVG family, and the objects of each
// bucket must be stored in a GVG within a group family.
message GlobalVirtualGroup {
  uint32 id = 1;
  uint32 family_id = 2;

  uint32 primary_sp_id = 3;
  repeated uint32 secondary_sp_ids = 4;

  uint64 stored_size = 5;
  uint64 total_size = 6;
  string virtual_payment_address = 7 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // total_deposit defines the number of tokens deposited by this storage provider for staking.
  string total_deposit = 8 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}

// Global virtual group family serve as a means of grouping global virtual groups.
// Each bucket must be associated with a unique global virtual group family and cannot cross families.
message GlobalVirtualGroupFamily {
  // id is the identifier of the global virtual group family.
  uint32 id = 1;
  // global_virtual_group_ids is a list of identifiers of the global virtual groups associated with the family.
  repeated uint32 global_virtual_group_ids = 2;
  // virtual_payment_address is the payment address associated with the global virtual group family.
  string virtual_payment_address = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

message GlobalVirtualGroupsBindingOnBucket {
  // bucket_id is the unique identification for the bucket.
  string bucket_id = 1 [
    (cosmos_proto.scalar) = "cosmos.Uint",
    (gogoproto.customtype) = "Uint",
    (gogoproto.nullable) = false
  ];
  // global_virtual_group_ids is a list of identifiers of the global virtual groups associated with the bucket.
  repeated uint32 global_virtual_group_ids = 2;
  // local_virtual_group_ids is a list of identifiers of the local virtual groups associated with the bucket.
  repeated uint32 local_virtual_group_ids = 3;
}

message GVGStatisticsWithinSP {
  uint32 storage_provider_id = 1;
  // secondary_count defines the number of global virtual groups (GVGs) in
  // which this storage provider serves as a secondary storage provider.
  uint32 secondary_count = 3;
}
